--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,21 @@
   --color-primary: red;
   --color-secondary: white;
 }
+
+
+.orb-container {
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+.light-rays-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  pointer-events: none;
+  z-index: 0;
+  overflow: hidden;
+}
